<resources>
    <string name="app_name">سامانه اموال‌گردانی</string>
    <string name="appName_fa">سامانه اموال‌گردانی</string>
    <string name="organization_name_fa">سازمان فناوری اطلاعات و ارتباطات</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="username_fa">نام کاربری</string>
    <string name="password_fa">رمز عبور</string>
    <string name="retype_password_fa">تکرار رمز عبور</string>
    <string name="enter_fa">ورود</string>
    <string name="register_fa">ثبت نام</string>
    <string name="inquiry_fa">استعلام</string>
    <string name="inquiry_assets_fa">استعلام اموال</string>
    <string name="pitchName_fa">نام محل استقرار:</string>
    <string name="enterPersonCode_fa">کد شخص خود را وارد کنید</string>
    <string name="NationalCodeOrName_fa">کدملی یا نام تحویل گیرنده</string>
    <string name="inquiryAssetByBarcode_fa">استعلام اموال بر اساس بارکد</string>
    <string name="inquiryAsset">استعلام اموال</string>
    <string name="BarcodeOrTag_fa">بارکد یا برچسب</string>
    <string name="inquiryAssetByBarcodeOrTag_fa">استعلام اموال با بارکد یا برچسب</string>
    <string name="dedicateAsset_fa">تخصیص اموال</string>
    <string name="assetAllocation_or_edit_asset_fa">تخصیص یا ویرایش اموال</string>
    <string name="assetAllocation_fa">شناسایی اموال</string>
    <string name="newasset">اموال جدید</string>
    <string name="inquiryAssetByLocation_fa">استعلام اموال با محل استقرار</string>
    <string name="inquiryAssetByNationalCodeOrName_fa">استعلام اموال با کدملی یا تحویل گیرنده</string>
    <string name="ByLocation_fa">محل استقرار</string>
    <string name="makhdoosh_fa">اموال مخدوش</string>
    <string name="person_list_fa">تحویل گیرنده ها</string>
    <string name="label_fa">برچسب:</string>
    <string name="barcode_fa">بارکد اموال :</string>
    <string name="barcode_fa2">بارکد اموال</string>
    <string name="assetType_fa">  نام نوع اموال :</string>
    <string name="costCenterName_fa">مرکز هزینه اصلی: </string>
    <string name="dash"> _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _  </string>
    <string name="dash1">  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ </string>
    <string name="receiverName_fa">نام تحویل گیرنده:</string>
    <string name="assetStatus_fa">وضعیت کالا : </string>
    <string name="registerAsset_fa">ثبت</string>
    <string name="registerBarcode_fa">ثبت بارکد برای اموال</string>
    <string name="registerBarcode_fa2">تخصیص بارکد اموال</string>
    <string name="modifyAsset_fa">شماره اموال:</string>
    <string name="mainBranch_fa"> گروه اصلی</string>
    <string name="assetName_fa"> نام کالا</string>
    <string name="new_fa">جدید</string>
    <string name="scratched_fa">مخدوش شده</string>
    <string name="registerProducts_fa">ثبت اموال</string>
    <string name="scanBarcode_fa"> بارکد را اسکن کنید </string>
    <string name="registerBarcodeFortheseAssets">ثبت بارکد برای این اموال  </string>
    <string name="enterNewBarcode">بارکد جدید را وارد نمایید</string>
    <string name="enterBarcode">بارکد اموال را وارد نمایید</string>
    <string name="setBarcodeTitle">بارکد را اسکن یا وارد کنید</string>
    <string name="barcode">بارکد</string>
    <string name="confirm">تایید</string>
    <string name="scan">اسکن کنید</string>
    <string name="close">بستن</string>
    <string name="do_you_confirm_asset_view">رویت دارایی را تایید می کنید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="exit">خروج</string>
    <string name="confirm_exit">آیا می خواهید از اپلیکیشن خارج شوید؟</string>
    <string name="assetList">لیست اموال</string>
    <string name="enter_barcode_or_scan_it">بارکد کالا را وارد کنید یا اسکن نمایید</string>
    <string name="enter_asset_location">محل استقرار را انتخاب نمایید</string>
    <string name="please_wait">لطفا منتظر بمانید</string>
    <string name="sampleUserNameFamily">نام و نام خانوادگی: نیما رستنده</string>
    <string name="registerAndReturn_fa">ثبت و بازگشت</string>
    <string name="delete_fa">حذف</string>
    <string name="searchHint">متن خود را وارد نمایید</string>
    <string name="searchHint2">جستجو نمایید</string>
    <string name="search_based_on">جستجو بر اساس</string>
    <string name="cost_center_name_fa">نام مرکز</string>
    <string name="asset_location">نام محل استقرار</string>
    <string name="return_fa">بازگشت</string>
    <string name="search_hint3">جستجو</string>
    <string name="location_fa">محل استقرار</string>
    <string name="tag_fa">برچسب</string>
    <string name="region_name_fa">واحد اجرایی</string>
    <string name="national_code_sample">2223334449</string>
    <string name="nationa_code_fa">کد ملی</string>
    <string name="laws_fa">قوانین و مقررات</string>
</resources>