<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="301dp"
    android:layout_height="130dp"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_border_green">

        <TextView
            android:id="@+id/tvDeleteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/iransansweb"
            android:text="@string/do_you_confirm_asset_view"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_green_left_corners_round"
            android:fontFamily="@font/iransansweb"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_green_right_corners_round"
            android:fontFamily="@font/iransansweb"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>