<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:padding="15dp">

    <TextView
        android:id="@+id/tvAddBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="-2dp"
        android:fontFamily="@font/iransansweb"
        android:gravity="center"
        android:text="@string/registerBarcode_fa"
        android:textAlignment="0"
        android:textColor="#4E4D4D"
        android:textSize="15sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddBarcode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAddBarcode"
        android:layout_marginTop="10dp"
        android:hint="@string/scanBarcode_fa"
        android:inputType="number"
        android:layoutDirection="rtl"
        android:outlineAmbientShadowColor="#DAD73C"
        android:outlineSpotShadowColor="@color/purple_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iransansweb"
            android:inputType="number"
            android:maxEms="0"
            android:maxLength="11"
            android:maxLines="1"
            android:textSize="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegisterBarcode"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tilAddBarcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="#17673D"
        android:fontFamily="@font/iransansweb"
        android:text="@string/registerBarcodeFortheseAssets"
        android:textColor="@color/white"
        android:textSize="13dp" />

</RelativeLayout>