<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <include
        android:id="@+id/vwLoading"
        layout="@layout/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:elevation="10dp"
        android:visibility="gone"
        android:translationZ="10dp" />

    <RelativeLayout
        android:id="@+id/rlSectionLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/iransansweb"
            android:text="@string/appName_fa"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlSectionLogin"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/rlSectionLogo"
        android:layoutDirection="rtl"
        android:visibility="visible">



        <TextView
            android:id="@+id/tvEnterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/iransansweb"
            android:text="وارد شوید"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlUsernameForLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acetUsernameForLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/background_gray4_light_corners_round_2"
                android:drawableRight="@drawable/ic_user1"
                android:drawablePadding="10dp"
                android:fontFamily="@font/iransansweb"
                android:gravity="right|center_vertical"
                android:hint="@string/username_fa"
                android:inputType="text"
                android:maxEms="0"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text=""
                android:textColorHint="@color/hint_color" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPasswordForLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/rlUsernameForLogin"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acetPasswordForLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/background_gray4_light_corners_round_2"
                android:drawableRight="@drawable/ic_password2"
                android:drawablePadding="10dp"
                android:fontFamily="@font/iransansweb"
                android:gravity="right|center_vertical"
                android:hint="@string/password_fa"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingRight="20dp"
                android:text=""
                android:textColorHint="@color/hint_color"
                app:passwordToggleEnabled="true" />

            <ImageView
                android:id="@+id/ivEye"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_eye_open" />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acbtnLogin"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_primary"
        android:fontFamily="@font/iransansweb"
        android:text="@string/enter_fa"
        android:textColor="@color/white"
        android:textSize="16dp" />






</RelativeLayout>


